@startuml
!define DEFAULT
!includeurl https://raw.githubusercontent.com/JustMilan/plantuml-styles/main/style.puml

title Domain Class Diagram

note as note1
All classes do have an Id
generated by Spring
end note

'classes
class Address {
- houseNumber
- addition
- street
- postalcode
- city
}

class Location {
- name
}

class Room {
- floor
}

class Workplace {
}

class Reservation {
- date
- starTime
- endTime
}

class Employee {
- firstName
- lastName
}

'Relations
Address "1" -down- Location
Location -right- "1..*" Room
Room "1" -right- Workplace
Room "0..1" -- Reservation
Workplace "0..1" -- Reservation
Reservation -- "1" Employee

@enduml
